Add CSS modules and move files into separate folders

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>webpack 4 quickstart</title>
 </head>
 <body>
-    <div id="app">
+    <div id="app" style="display:none">
     	<h1>Hello World</h1>
     	<h2>This might actually work</h2>
     </div>
