Fixed the FOUC problem (see README.md for details). Also added some comment clarifications in webpack.config.js

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <title>webpack 4 quickstart</title>
 </head>
 <body>
-    <div id="app" style="display:none">
+    <div id="app">
     	<h1>Hello World</h1>
     	<h2>This might actually work</h2>
+    	<h3>Is this better???</h3>
     </div>
 </body>
 </html>
