Added VUE JS Code and cleaned up module locations

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     	<h1>Hello World</h1>
     	<h2>This might actually work</h2>
     	<h3>Is this better???</h3>
+    	<p>Things are moving along here...</p>
     </div>
 </body>
 </html>
