Full VueJS with nested components simple example

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>webpack 4 quickstart</title>
+	<!-- tag below needed for Electron Debugger -->
+	<script src="http://localhost:8098"></script>
 </head>
 <body>
+	Before...
     <div id="app">
     	<h1>Hello World</h1>
     	<h2>This might actually work</h2>
     	<h3>Is this better???</h3>
     	<p>Things are moving along here...</p>
     </div>
+    ...After
 </body>
 </html>
